subprojects {
	apply plugin: 'java-library'

	version "1.1.0"

	sourceCompatibility = 15
	targetCompatibility = 15

	java {
		modularity.inferModulePath = true
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += "--enable-preview"
	}
	tasks.withType(Test) {
		jvmArgs += "--enable-preview"
	}
	tasks.withType(JavaExec) {
		jvmArgs += "--enable-preview"
	}

	afterEvaluate {
		repositories {
			mavenCentral()
			maven {
				url "https://maven.pkg.github.com/ealrann/emf-standalone"
				credentials {
					username = "ealrann"
					// Public token with 'read:packages' scope, see https://github.com/jcansdale-test/gradle-java-consume
					password = "\u0061\u0031\u0063\u0037\u0065\u0061\u0034\u0064\u0064\u0061\u0038\u0066\u0039\u0032\u0036\u0064\u0030\u0038\u0034\u0030\u0030\u0032\u0030\u0038\u0062\u0034\u0033\u0037\u0065\u0030\u0066\u0030\u0031\u0065\u0064\u0032\u0033\u0066\u0061\u0034"
				}
			}
		}
	}
}
